fix: modify element stacking in contact form (added z-index to logo-sticker)

--- a/src/app/features/contact/contact.css
+++ b/src/app/features/contact/contact.css
@@ -42,6 +42,7 @@ section {
   right: 32px;
   top: 0;
   transform: rotate(10deg);
+  z-index: 2;
 }
 
 @media (max-width: 1115px) {
